Prevent table headers from wrapping
This seems a bit heavyhanded but it also seems to be the simplest
solution that works to prevent the sort indicator from wrapping below
the text.

--- a/app/assets/stylesheets/uchi/application.css
+++ b/app/assets/stylesheets/uchi/application.css
@@ -2429,6 +2429,9 @@
     --tw-tracking: var(--tracking-tight);
     letter-spacing: var(--tracking-tight);
   }
+  .whitespace-nowrap {
+    white-space: nowrap;
+  }
   .datatable-sorter {
     .datatable-wrapper .datatable-table thead th & {
       text-transform: uppercase;
